# uid2-client-python

./: .gitignore  .pre-commit-config.yaml  Dockerfile.dev  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.test  version.json
.github/workflows/: build-and-publish.yaml  build-and-test.yaml  publish.yaml
examples/: sample_auto_refresh.py  sample_bidstream_client.py  sample_client.py  sample_encryption.py  sample_generate_identity_map.py  sample_generate_identity_map_v3.py  sample_get_identity_buckets.py  sample_identity_map_client.py  sample_optout_status_client.py  sample_sharing.py  sample_sharing_client.py  sample_token_generate_refresh.py
scripts/: generate_uid2_token.py
tests/: __init__.py  publisher_tests.py  sharing_test.py  test_bidstream_client.py  test_bidstream_client_e2e.py  test_client.py  test_doc_sample_code.py  test_encryption.py  test_identity_map_client.py  test_identity_map_client_unit_tests.py  test_identity_map_v3_client.py  test_identity_map_v3_response.py  test_key_parse.py  test_keys.py  test_normalization.py  test_publisher_client.py  test_refresh_keys_util.py  test_request_response_util.py  test_sharing.py  test_sharing_client.py  test_sharing_client_e2e.py  test_utils.py  uid2_token_generator.py
uid2_client/: __init__.py  advertising_token_version.py  auto_refresh.py  bid_stream_client.py  bidstream_client.py  client.py  client_type.py  decryption_status.py  encryption.py  encryption_data_response.py  encryption_status.py  envelope.py  euid_client_factory.py  identity_buckets_response.py  identity_map_client.py  identity_map_input.py  identity_map_response.py  identity_map_v3_client.py  identity_map_v3_input.py  identity_map_v3_response.py  identity_scope.py  identity_tokens.py  identity_type.py  input_util.py  keys.py  optout_status_client.py  publisher_client.py  refresh_keys_util.py  refresh_response.py  request_response_util.py  sharing_client.py  token_generate_input.py  token_generate_response.py  token_refresh_response.py  uid2_base64_url_coder.py  uid2_client_factory.py  uid2_response.py  uid2_token_generator.py  unmapped_identity_reason.py
