[build-system]
requires = [
    "setuptools == 68.2.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "uid2_client"
version = "2.5.0"
authors = [
    { name = "UID2 team", email = "unifiedid-admin@thetradedesk.com" }
]
description = "UID2 SDK for Python"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = [
    "setuptools",
    "pycryptodome",
    "bitarray"
]
keywords = ["uid2"]
[project.license]
file="LICENSE"
[project.urls]
"Homepage" = "https://github.com/IABTechLab/uid2-client-python"
"Bug Tracker" = "https://github.com/IABTechLab/uid2-client-python/issues"
