[build-system]
requires = [
    "setuptools < 81",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["uid2_client*"]
exclude = ["tests*", "examples*"]

[project]
name = "uid2_client"
version = "2.8.0"
authors = [
    { name = "UID2 team", email = "unifiedid-admin@thetradedesk.com" }
]
description = "UID2 SDK for Python"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "pycryptodome",
    "bitarray"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "unittest-xml-reporting"
]
keywords = ["uid2","euid"]
[project.license]
file="LICENSE"
[project.urls]
"Homepage" = "https://github.com/IABTechLab/uid2-client-python"
"Bug Tracker" = "https://github.com/IABTechLab/uid2-client-python/issues"
