[metadata]
name = uid2-client
author = UID2 team
author_email = unifiedid-admin@thetradedesk.com
home_page = https://iabtechlab.com
description = Client for working with advertising UID2 services
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
# Get strings from http://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Other Audience
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    License :: OSI Approved :: Apache 2.0

[options]
zip_safe = true
packages = find:
include_package_data = true

[options.packages.find]
exclude = examples, tests

[bdist_wheel]
universal = false

[sdist]
formats = zip, gztar
